add/simple client page, [todo]implement css&js
